# bdnb_rag

./: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  api.py  check_prerequisites.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
rag/: Dockerfile  api.py
rag/helpers/: lib.py  prompts.py
rag/jobs/: data_retriever.py  feature_eng.py  indexer.py
rag/routes/: chat.py
rag/tools/: cache.py  config.py  database.py  logger.py
routes/: chat.py
tools/: config.py  data_retriever.py  database.py  feature_eng.py  indexer.py
ui/: Dockerfile  ui.py
ui/tools/: config.py
