[project]
name = "bdnd-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "llama-index>=0.12.30",
    "llama-index-embeddings-huggingface>=0.5.3",
    "llama-index-llms-huggingface>=0.5.0",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "qdrant-client>=1.13.3",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.1",
]
